# project-switch

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.lint  README.md  assist.backlog.yml  assist.yml  build.ps1  build.rs  build.sh  docker-build.sh  docker-compose.yml  example-config.yml  example-include-config.yml  package-lock.json  package.json
.assist/: backlog.jsonl
.claude/: settings.json  settings.local.json
.claude/commands/: build.md  commit.md  test.md
assets/: generate_icon.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
conductor/tracks/native_ui_20260327/: metadata.json  plan.md  spec.md
hotkey/: Cargo.toml  build.rs  start-hotkey.sh
hotkey/src/: config.rs  icon.rs  main.rs  sync.rs  webserver.rs
hotkey/src/platform/: macos.rs  mod.rs  windows.rs
scripts/: commit.ts
src/: config.rs  config.ts  history.rs  icon.rs  index.ts  main.rs
src/commands/: add.rs  add.ts  current.rs  list.rs  mod.rs  open.rs  open.ts  switch.rs  switch.ts  webview.rs
src/hotkey/: daemon.rs  icon.rs  mod.rs  sync.rs
src/launcher/: mod.rs
src/ui/: mod.rs  state.rs  window.rs
src/utils/: browser.rs  log.rs  mod.rs  shortcuts.rs  url.rs
