[package]
name = "project-switch"
version = "1.0.0"
edition = "2021"
description = "Fast CLI tool to manage and switch between projects"

[[bin]]
name = "project-switch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.1"
inquire = "0.7.5"
anyhow = "1.0"
dirs = "5.0"
urlencoding = "2.1"
meval = "0.2"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true