[package]
name = "project-switch"
version = "1.0.0"
edition = "2021"
description = "Fast CLI tool to manage and switch between projects"

[[bin]]
name = "project-switch"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.1"
inquire = "0.7.5"
anyhow = "1.0"
dirs = "5.0"
meval = "0.2"
urlencoding = "2.1"

# GUI (egui/eframe)
eframe = "0.31"

# Hotkey & system tray — Windows/macOS only (merged from project-switch-hotkey)
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
global-hotkey = "0.7"
tray-icon = "0.19"
muda = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
winit = { version = "0.30", default-features = false }
# In-app webview window (WKWebView). Runs in its own process so its event loop
# never collides with the egui launcher.
wry = "0.45"
tao = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
# In-app webview window (WebView2). Runs in its own process so its event loop
# never collides with the egui launcher.
wry = "0.45"
tao = "0.30"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true