[package]
name = "project-switch-hotkey"
version = "1.0.0"
edition = "2021"
description = "Global ALT+SPACE hotkey listener for project-switch"

[[bin]]
name = "project-switch-hotkey"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
muda = "0.15"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
