[package]
name = "project-switch-hotkey"
version = "1.0.0"
edition = "2021"
description = "Global hotkey listener for project-switch"

[[bin]]
name = "project-switch-hotkey"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
muda = "0.15"
serde_yaml = "0.9"
dirs = "5.0"
global-hotkey = "0.7"
tao = { version = "0.34", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
